--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "tabeventbus",
+  "name": "msgbus",
   "version": "1.0.1",
   "description": "",
   "keywords": [],
-  "main": "dist/tabeventbus.umd.js",
-  "module": "dist/tabeventbus.es5.js",
-  "typings": "dist/types/tabeventbus.d.ts",
+  "main": "dist/msgbus.umd.js",
+  "module": "dist/msgbus.es5.js",
+  "typings": "dist/types/msgbus.d.ts",
   "files": [
     "dist"
   ],
@@ -84,7 +84,7 @@
   "devDependencies": {
     "@commitlint/cli": "^7.1.2",
     "@commitlint/config-conventional": "^7.1.2",
-    "@types/jest": "^23.3.2",
+    "@types/jest": "^25.1.4",
     "@types/node": "^10.11.0",
     "colors": "^1.3.2",
     "commitizen": "^3.0.0",
@@ -92,8 +92,8 @@
     "cross-env": "^5.2.0",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^1.0.1",
-    "jest": "^23.6.0",
-    "jest-config": "^23.6.0",
+    "jest": "^25.1.0",
+    "jest-config": "^25.1.0",
     "lint-staged": "^8.0.0",
     "lodash.camelcase": "^4.3.0",
     "prettier": "^1.14.3",
@@ -109,7 +109,7 @@
     "semantic-release": "^15.9.16",
     "shelljs": "^0.8.3",
     "travis-deploy-once": "^5.0.9",
-    "ts-jest": "^23.10.2",
+    "ts-jest": "^25.2.1",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
