feat: package name change

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "msgbus",
-  "version": "1.0.1",
+  "name": "enhance-eventbus",
+  "version": "1.0.0",
   "description": "",
   "keywords": [],
-  "main": "dist/msgbus.umd.js",
-  "module": "dist/msgbus.es5.js",
-  "typings": "dist/types/msgbus.d.ts",
+  "main": "dist/enhance-eventbus.umd.js",
+  "module": "dist/enhance-eventbus.es5.js",
+  "typings": "dist/types/enhance-eventbus.d.ts",
   "files": [
     "dist"
   ],
