--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "enhance-eventbus",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "a enhance eventbus",
   "keywords": [],
   "main": "dist/enhance-eventbus.umd.js",
   "module": "dist/enhance-eventbus.es5.js",
   "typings": "dist/types/enhance-eventbus.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "screenshot"
   ],
   "author": "cjfff <cjfff1996@gmali.com>",
   "repository": {
